spec/src/snapshots/kube_do_spec__ksvc__ksvc_into_gvk.snap
---
source: spec/src/ksvc.rs
expression: gvk
---
GVKSpec {
    group: "serving.knative.dev",
    version: "",
    kind: "Service",
}
