spec/src/snapshots/kube_do_spec__ksvc__spec_works.snap
---
source: spec/src/ksvc.rs
expression: spec
---
KnativeSpec {
    group: "serving.knative.dev",
    version: "",
    kind: "Service",
    container_name: "my-coder",
    svc_image: "hzgood/my-coder",
    port: "8080",
    env: "",
}
